--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URL =mongodb+srv://Assignment03:Assignment03@cluster0.6eqa60s.mongodb.net/
 PASS_SEC =NQT
 JWT_SEC=NQT
 URLREACT =https://reactadmin-o7xz5wit7-nguyenquangtho6868.vercel.app/*
+URLCLIENT =https://reactclient.vercel.app/*
